select periode in ritasi dashboard

--- a/views/components/dashboard.html
+++ b/views/components/dashboard.html
@@ -65,6 +65,7 @@
 						 min-view="year"
 						 max-view="year"
 						 locale="id"
+						 change="$ctrl.updateRitasi()"
 						 format="MMMM YYYY">
 								<span class="input-group-addon">
 									<i class="fa fa-calendar"></i>
