Enable sort in master data driver

--- a/views/components/master.driver.html
+++ b/views/components/master.driver.html
@@ -20,13 +20,16 @@
           <table class="table table-bordered table-striped" ng-if="$ctrl.data.length > 0 || true">
             <thead>
             <tr>
-              <th>Nama Supir</th>
+              <th style="cursor: pointer" ng-click="$ctrl.sort()">
+                Nama Supir
+                <i style="margin-left: 10px" class="fa fa-{{$ctrl.getSortState()}}"></i>
+              </th>
               <th style="width: 70px">Status</th>
               <th style="width: 105px">&nbsp;</th>
             </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="item in $ctrl.data">
+              <tr ng-repeat="item in $ctrl.dataSorted">
                 <td>{{item.name}}</td>
                 <td><span class="label" ng-class="item.flag_active ? 'label-success' : 'label-default'">{{item.flag_active ? "Aktif" : "Non Aktif"}}</span></td>
                 <td>
