--- a/views/components/master.route.html
+++ b/views/components/master.route.html
@@ -23,7 +23,10 @@
           <table class="table table-bordered table-striped" ng-if="$ctrl.data.length > 0 || true">
             <thead>
             <tr>
-              <th>Rute</th>
+              <th style="cursor: pointer" ng-click="$ctrl.sort()">
+                Rute
+                <i style="margin-left: 10px" class="fa fa-{{$ctrl.getSortState()}}"></i>
+              </th>
               <th>Uang Jalan</th>
               <th>Komisi Supir</th>
               <th>Komisi Kenek</th>
@@ -33,7 +36,7 @@
             </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="item in $ctrl.data">
+              <tr ng-repeat="item in $ctrl.dataSorted">
                 <td>{{item.name}}</td>
                 <td class="text-right">{{item.additional_data.cost|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.commission|currency:""}}</td>
