--- a/views/components/master.route.html
+++ b/views/components/master.route.html
@@ -28,6 +28,7 @@
                 <i style="margin-left: 10px" class="fa fa-{{$ctrl.getSortState()}}"></i>
               </th>
               <th>Uang Jalan</th>
+              <th>Harga Jual</th>
               <th>Komisi Supir</th>
               <th>Komisi Kenek</th>
               <th>Tambahan Solar</th>
@@ -39,6 +40,7 @@
               <tr ng-repeat="item in $ctrl.dataSorted">
                 <td>{{item.name}}</td>
                 <td class="text-right">{{item.additional_data.cost|currency:""}}</td>
+                <td class="text-right">{{item.additional_data.price|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.commission|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.commission2|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.solar_cost|currency:""}}</td>
@@ -71,6 +73,11 @@
               <label>Uang Jalan</label>
               <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right" ng-input-currency ng-model="$ctrl.param.additional_data.cost">
               <span ng-if="$ctrl.hasError('cost')" class="help-block">{{$ctrl.error['cost']}}</span>
+            </div>
+            <div class="form-group" ng-class="{'has-error': $ctrl.hasError('price')}">
+              <label>Harga Jual</label>
+              <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right" ng-input-currency ng-model="$ctrl.param.additional_data.price">
+              <span ng-if="$ctrl.hasError('price')" class="help-block">{{$ctrl.error['price']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('commission')}">
               <label>Komisi Supir</label>
