--- a/views/components/app.html
+++ b/views/components/app.html
@@ -8,7 +8,7 @@
 </div>
 <footer class="main-footer">
 	<div class="pull-right hidden-xs">
-		JMP Apps v2
+		JMP Apps v{{$ctrl.version}} - Build on {{$ctrl.buildVersion}}
 	</div>
 	<strong>Copyright &copy; 2019 <a href="https://jmp-logistic.co.id/" target="_blank">JMP Logistic</a>.</strong> All rights reserved.
 </footer>
