update app layout

--- a/views/components/app.html
+++ b/views/components/app.html
@@ -1,6 +1,6 @@
 <header class="main-header"></header>
 <main-sidebar class="main-sidebar"></main-sidebar>
-<div class="content-wrapper" style="min-height: 490px;">
+<div class="content-wrapper" style="min-height: 770px;">
 	<ui-view ng-show="$ctrl.$rootScope.isRegistered() || ('callback' | includedByState)"></ui-view>
 	<center ng-hide="$ctrl.$rootScope.isRegistered()">
 		<div class="lds-ellipsis center-block"><div></div><div></div><div></div><div></div></div>
@@ -10,6 +10,5 @@
 	<div class="pull-right hidden-xs">
 		JMP Apps v{{$ctrl.version}} - Build on {{$ctrl.buildVersion}}
 	</div>
-	<strong>Copyright &copy; 2019 <a href="https://jmp-logistic.co.id/" target="_blank">JMP Logistic</a>.</strong> All rights reserved.
+	<strong>Copyright &copy; {{$ctrl.year}} <a href="https://jmp-logistic.co.id/" target="_blank">JMP Logistic</a>.</strong> All rights reserved.
 </footer>
-<script src="/dist/js/app.js"></script>
