--- a/source/views/components/transaksi.main.html
+++ b/source/views/components/transaksi.main.html
@@ -1,10 +1,10 @@
 <section class="content-header">
   <h1>
-    Buat Transaksi
+    {{$ctrl.param.id == null ? 'Buat' : 'Revisi'}} Transaksi
   </h1>
   <ol class="breadcrumb">
     <li><a ui-sref="dashboard"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-    <li class="active">New Transaction</li>
+    <li class="active">{{$ctrl.param.id == null ? 'New' : 'Revise'}} Transaction</li>
   </ol>
 </section>
 <section class="content">
@@ -63,7 +63,7 @@
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('route')}">
               <label>Rute<small class="text-red">*</small></label>
               <input ng-show="$ctrl.step_two == true" type="text" autocomplete="off" data-lpignore="true" class="form-control readonly" ng-model="$ctrl.param.route.name" readonly>
-              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission; $ctrl.param.commission2 = $ctrl.param.route.additional_data.commission2; $ctrl.isUseSolar()" placeholder="Masukan Rute" required></oi-select>
+              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.onRouteChange()" placeholder="Masukan Rute" required></oi-select>
               <span ng-if="$ctrl.hasError('route')" class="help-block">{{$ctrl.error['route']}}</span>
             </div>
             <table class="table table-striped">
@@ -151,12 +151,20 @@
                   <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right as-label" readonly ng-input-currency ng-model="$ctrl.current_ballance">
                 </td>
               </tr>
+              <tr ng-if="$ctrl.param.id">
+                <td>
+                  <input type="text" class="form-control as-label" readonly value="Pengembalian dari transaksi sebelumnya">
+                </td>
+                <td>
+                  <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right text-green as-label" readonly ng-input-currency ng-model="$ctrl.data.total_cost">
+                </td>
+              </tr>
               <tr>
                 <td>
                   <input type="text" class="form-control as-label" readonly value="Total Biaya">
                 </td>
                 <td>
-                  <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right as-label" style="border-bottom: 1px solid #afafaf !important;" readonly ng-input-currency ng-model="$ctrl.total_cost">
+                  <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right text-red as-label" style="border-bottom: 1px solid #afafaf !important;" readonly ng-input-currency ng-model="$ctrl.total_cost_entries">
                 </td>
               </tr>
               <tr>
