add tambahan solar field in view trx page

--- a/source/views/components/view-transaksi.html
+++ b/source/views/components/view-transaksi.html
@@ -36,6 +36,7 @@
                 <tr><th>Tipe Kontainer</th> <td><span ng-bind-html="$ctrl.data.container_size || $ctrl.defaultIfEmpty"></span></td></tr>
                 <tr><th>Komisi Supir</th> <td>Rp. {{$ctrl.data.commission|currency:""}}</td></tr>
                 <tr><th>Komisi Kenek</th> <td>Rp. {{$ctrl.data.commission2|currency:""}}</td></tr>
+                <tr><th>Tambahan Solar</th> <td>Rp. {{$ctrl.data.solar_cost|currency:""}}</td></tr>
               </tbody>
             </table>
           </div>
