Master Data Sub Customer & Depo MT

--- a/source/views/components/main-sidebar.html
+++ b/source/views/components/main-sidebar.html
@@ -63,6 +63,8 @@
 			<ul class="treeview-menu">
 				<li ng-class="{active: ('routes' | includedByState)}"><a ui-sref="routes">Master Rute</a></li>
 				<li ng-class="{active: ('customers' | includedByState)}"><a ui-sref="customers">Master Kustomer</a></li>
+				<li ng-class="{active: ('masterSubCustomer' | includedByState)}"><a ui-sref="masterSubCustomer">Master Sub Kustomer</a></li>
+				<li ng-class="{active: ('masterDepoMT' | includedByState)}"><a ui-sref="masterDepoMT">Master Depo MT</a></li>
 				<li ng-class="{active: ('vehicles' | includedByState)}"><a ui-sref="vehicles">Master Kendaraan</a></li>
 				<li ng-class="{active: ('drivers' | includedByState)}"><a ui-sref="drivers">Master Supir</a></li>
 				<li ng-class="{active: ('keneks' | includedByState)}"><a ui-sref="keneks">Master Kenek</a></li>
