--- a/source/views/components/view-transaksi.html
+++ b/source/views/components/view-transaksi.html
@@ -77,7 +77,7 @@
               <tr ng-if="$ctrl.isClosed()"><td>Status</td> <td><span class="label label-default">Closed</span></td></tr>
               <tr ng-if="$ctrl.isClosed()"><td> </td> <td>{{$ctrl.data.additional_data['closed_by']}}</td></tr>
               <tr ng-if="$ctrl.isClosed()"><td> </td> <td>{{$ctrl.data.additional_data['closed_at']}}</td></tr>
-              <tr ng-if="!$ctrl.isClosed()"><td>Status</td> <td><span class="label label-success">Open</span> <a ng-click="$ctrl.closeRecord(item)" ng-disabled="$ctrl.isClosed(item)" class="btn btn-xs btn-success"><i class="fa fa-check"></i></a></td></tr>
+              <tr ng-if="!$ctrl.isClosed()"><td>Status</td> <td><span class="label label-success">Open</span> <a ng-click="$ctrl.closeRecord()" ng-hide="$ctrl.isClosed()" ng-disabled="!$ctrl.isComplete()" class="btn btn-xs btn-success"><i class="fa fa-check"></i></a></td></tr>
               </tbody>
             </table>
             <table class="table" ng-hide="$ctrl.step_one == true">
