show saldo bank for operator

--- a/source/views/components/dashboard.html
+++ b/source/views/components/dashboard.html
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 
-		<div class="col-lg-3 col-xs-12" ng-hide="$ctrl.$rootScope.user.role == 'Operator'">
+		<div class="col-lg-3 col-xs-12">
 			<div class="small-box" ng-class="$ctrl.getBackgroundFromAmount($ctrl.data.ballance[1])">
 				<div class="inner">
 					<h3>{{$ctrl.data.ballance[1]}}</h3>
