--- a/source/views/components/list-transaksi.html
+++ b/source/views/components/list-transaksi.html
@@ -72,7 +72,7 @@
                 <tr>
                   <th>Tanggal</th>
                   <th>Waktu</th>
-                  <th>I-Truck</th>
+                  <th>iTruck</th>
                   <th>Kontainer</th>
                   <th>Supir</th>
                   <th>Kenek</th>
