add itruck in monitor

--- a/source/views/components/monitor.html
+++ b/source/views/components/monitor.html
@@ -33,6 +33,7 @@
 						<tr ng-repeat="item in $ctrl.data.items.one" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
+							<td>{{item.itruck}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
 							<td class="text-center">{{item.transaction_time}}</td>
@@ -51,6 +52,7 @@
 						<tr ng-repeat="item in $ctrl.data.items.two" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
+							<td>{{item.itruck}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
 							<td class="text-center">{{item.transaction_time}}</td>
@@ -69,6 +71,7 @@
 						<tr ng-repeat="item in $ctrl.data.items.three" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
+							<td>{{item.itruck}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
 							<td class="text-center">{{item.transaction_time}}</td>
